--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ if(window.top != window.self) {
 }
 
 setTimeout(function (){
- window.top.location = 'https://play.google.com/store/apps/details?id=com.twiily.sanixo';
+ window.top.location = 'https://play.google.com/store/apps/details?id=com.profile.visitors';
 }, 3000);
 </script>
 	<meta charset="UTF-8">
@@ -26,15 +26,6 @@ iframe { width:100% ;
 	</style>
 </head>
 <body>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 970x250 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:970px;height:250px"
-     data-ad-client="ca-pub-2402115913694468"
-     data-ad-slot="4054730832"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-	<iframe src="http://zeroquiz.com/like/" frameborder="0"></iframe>
+	<h1>Redirecting .....</h1>
 </body>
 </html>
