--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83439465-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-<script>
-if(window.top != window.self) {
-    window.top.location = window.location.href;
-}
-
-setTimeout(function (){
- window.top.location = 'https://play.google.com/store/apps/details?id=com.profile.visitors';
-}, 3000);
-</script>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-body, html { width:100% ;
-    height:100% ;
-    overflow:hidden ;
-text-align:center;
-}
-
-iframe { width:100% ;
-        height:100% ;
-    border:none ;
-}
-	</style>
-</head>
-<body>
-	<h1>Redirecting .....</h1>
-</body>
+    <head>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-83439465-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script>
+            if(window.top != window.self) {
+              window.top.location = window.location.href;
+            }
+            setTimeout(function (){
+              if( navigator.userAgent.match(/Android/i) ){
+                window.top.location = 'https://play.google.com/store/apps/details?id=com.profile.visitors';
+              } else {
+                window.top.location = 'http://zeroquiz.com/t/your-top-profile-visitors/?ref=sanixo';
+              }
+            }, 3000);
+        </script>
+        <meta charset="UTF-8">
+        <title>Document</title>
+        <style>
+            body, html { width:100% ;
+            height:100% ;
+            overflow:hidden ;
+            text-align:center;
+            }
+            iframe { width:100% ;
+            height:100% ;
+            border:none ;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Redirecting .....</h1>
+    </body>
 </html>
