--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             }
             setTimeout(function (){
               if( navigator.userAgent.match(/Android/i) ){
-                window.top.location = 'https://play.google.com/store/apps/details?id=com.profile.visitors';
+                window.top.location = 'http://gifape.com/gifs/5LPXgzDQdX5';
               } else {
-                window.top.location = 'http://zeroquiz.com/t/your-top-profile-visitors/?ref=sanixo';
+                window.top.location = 'http://gifape.com/gifs/5LPXgzDQdX5';
               }
             }, 3000);
         </script>
